# signal-flow-simulator-javafx-cpp

./: README.md  REPORT.md  demo-video.txt  mvnw.cmd  pom.xml
native/: CMakeLists.txt
native/include/: native_math.h
native/src/: jni_bridge.cpp  native_math.cpp
src/main/java/com/signalflow/: App.java
src/main/java/com/signalflow/controller/: SimulationController.java  WorkspaceController.java
src/main/java/com/signalflow/engine/: NativeMath.java  SimulationEngine.java
src/main/java/com/signalflow/model/: Block.java  BlockGraph.java  ClockBlock.java  Connection.java  CosineBlock.java  Port.java  ScopeBlock.java  SineBlock.java
src/main/java/com/signalflow/view/: BlockNode.java  ClockBlockNode.java  CosineBlockNode.java  PortNode.java  ScopeBlockNode.java  SineBlockNode.java  WireNode.java  WorkspaceCanvas.java
src/main/resources/com/signalflow/: styles.css
